# nebula8

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  VERSION  config.example.py  config.py  docker-compose.yml  example.config.py  main.py  pyproject.toml  requirements.txt  transition20.py
.circleci/: config.yml
core/: __init__.py
core/commands/: __init__.py  index.py
core/commands/admin/: __init__.py  badword.py  ban.py  check_permission.py  dashboard.py  delete_message.py  filters.py  greport.py  info_group.py  mute.py  pin.py  promote.py  say.py  set_custom_handler.py  set_lang.py  set_rules.py  set_welcome.py  settings.py  (+6 more)
core/database/: QB-README.md  QB.py  __init__.py  db_connect.py  migrations.py  redis_connect.py
core/decorators/: __init__.py  admin.py  bot.py  delete.py  owner.py  private.py  public.py
core/handlers/: __init__.py  check_status_chat.py  check_status_user.py  custom_handler.py  errors.py  filters_chat.py  flood_wait.py  handler_errors.py  handlers_index.py  logs.py  migrate_chat.py  superban.py  welcome.py
core/jobs/: __init__.py  night_mode.py  query_repeat.py  send_db_backup.py  send_debug.py
core/utilities/: __init__.py  constants.py  functions.py  menu.py  message.py  monads.py  parser.py  regex.py  scheduler.py  strings.py
docker/bot/: Dockerfile
languages/: EN.py  IT.py  __init__.py  getLang.py
plugins/: __init__.py  distrowatch.py  google.py  inspire.py  linktree.py  mdn_search.py  meme.py  plugin_index.py  reactions.py  scheduler.py  search.py  weather.py  wikipedia.py
(+44 files in other folders)
